# amlnn-model-playground

./: README.md  README_CN.md
examples/clip/cpp/src/: main.cpp  model_invoke.cpp
examples/ppocr-det/cpp/: build-android.sh  build-linux.sh
examples/ppocr-det/cpp/src/: CMakeLists.txt  clipper.cpp  clipper.h  main.cpp  postprocess.cpp  postprocess.h
examples/yolov11/cpp/src/: main.cpp
